@@ -2,7 +2,8 @@ Summary of Changes to DuroDBMS
 
 DuroDBMS 1.1
 
-- Added read-only operators serialize(), add_seconds(), weekday(), and format() to libduro.
+- Added read-only operators serialize(), add_seconds(), weekday(), local_to_utc(),
+  and format() to libduro.
 
 - Added RDB_obj_to_bin() and RDB_bin_to_obj() to rel/rdb.h.
   Removed internal functions from rel/serialize.h.
